--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-body{
-    background-color: darkslategrey;
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
+  background-color: darkslategrey;
+  color: #373940 !important;
+}
+
+* {
+  box-sizing: border-box;
 }
