feat(product page): add tabs & start clean design

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,3 +20,6 @@ html,body {
 .link-add-to-wishlist > .la-plus-circle{
   color: #373940 !important;
 }
+.uk-button-text-no-border::before{
+  border: none !important;
+}
