fix: improve index markup structure

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,3 +23,8 @@ html,body {
 .uk-button-text-no-border::before{
   border: none !important;
 }
+/* SLider */
+#header-slider-container{
+  position: relative;
+  top: 0;
+}
