--- a/styles/style.css
+++ b/styles/style.css
@@ -42,3 +42,16 @@ nav{
   font-size: 4em;
   color: var(--light-grey);
 }
+footer form input[type=email]{
+  border: 2px solid var(--dark) !important;
+}
+.footer-list-links{
+  color: var(--dark);
+}
+.footer-list-links:hover{
+  text-decoration: none;
+}
+.footer-social-icons{
+  font-size:2em;
+  color: var(--dark);
+}
